# drone_delivery_optimization

./: .gitignore  README.md  pyproject.toml
data/: generator.py
data/benchmarks/: README.md  benchmark_01.json  benchmark_02.json  benchmark_03.json  benchmark_04.json  benchmark_05.json  benchmark_06.json  benchmark_07.json  benchmark_08.json  benchmark_09.json  benchmark_10.json
data/processed/: README.md
data/raw/: README.md
docs/complexity/: complexity_study.md
docs/formulations/: graph_flow_formulation.md  milp_formulation.md
docs/report_notes/: README.md
experiments/: run_experiments.py
experiments/configs/: default_experiment.yaml
notebooks/: README.md
outputs/plots/: README.md
outputs/routes/: README.md
outputs/tables/: README.md
scripts/: generate_benchmarks.py  run_single_instance.py
src/drone_delivery/: __init__.py
src/drone_delivery/algorithms/: __init__.py
src/drone_delivery/core/: __init__.py  energy.py  entities.py  feasibility.py  solution.py
src/drone_delivery/data/: __init__.py  generator.py  io.py
src/drone_delivery/evaluation/: __init__.py  comparison.py  metrics.py
src/drone_delivery/models/: __init__.py  graph_flow.py  milp.py
src/drone_delivery/operators/: __init__.py  crossover.py  encoding.py  mutation.py  (+2 more)
src/drone_delivery_optimization.egg-info/: PKG-INFO  SOURCES.txt
tests/integration/: README.md
tests/unit/: README.md  test_branch_and_bound.py  test_core_domain.py  test_evaluation.py  test_generator.py  test_genetic_algorithm.py  test_operators.py  test_simulated_annealing.py  test_visualization.py
(+11 files in other folders)
