[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-delivery-optimization"
version = "0.1.0"
description = "Drone-based delivery route optimization with exact and metaheuristic methods."
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

